samples/_failures_safe/1761204226_f35501_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f06a528b.c: In function ‘main’:
./samples/SAFE/__tmp_f06a528b.c:174:20: error: missing terminating " character
  174 |             printf("%
      |                    ^~
./samples/SAFE/__tmp_f06a528b.c:174:13: error: expected expression at end of input
  174 |             printf("%
      |             ^~~~~~
./samples/SAFE/__tmp_f06a528b.c:174:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f06a528b.c:174:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f06a528b.c:174:13: error: expected declaration or statement at end of input
